syntax = "proto3";

package etcdserverpb;

option go_package = "github.com/pantopic/config-bus/internal";

message KeyValue {
  bytes key = 1;
  int64 create_revision = 2;
  int64 mod_revision = 3;
  int64 version = 4;
  bytes value = 5;
  int64 lease = 6;
}

message Event {
  enum EventType {
    PUT = 0;
    DELETE = 1;
  }
  EventType type = 1;
  KeyValue kv = 2;
  KeyValue prev_kv = 3;
}

service KV {
  rpc Range(RangeRequest) returns (RangeResponse) {}
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc DeleteRange(DeleteRangeRequest) returns (DeleteRangeResponse) {}
  rpc Txn(TxnRequest) returns (TxnResponse) {}
  rpc Compact(CompactionRequest) returns (CompactionResponse) {}
}

service Watch {
  rpc Watch(stream WatchRequest) returns (stream WatchResponse) {}
}

service Lease {
  rpc LeaseGrant(LeaseGrantRequest) returns (LeaseGrantResponse) {}
  rpc LeaseRevoke(LeaseRevokeRequest) returns (LeaseRevokeResponse) {}
  rpc LeaseKeepAlive(stream LeaseKeepAliveRequest) returns (stream LeaseKeepAliveResponse) {}
  rpc LeaseTimeToLive(LeaseTimeToLiveRequest) returns (LeaseTimeToLiveResponse) {}
  rpc LeaseLeases(LeaseLeasesRequest) returns (LeaseLeasesResponse) {}
}

service Cluster {
  rpc MemberAdd(MemberAddRequest) returns (MemberAddResponse) {}
  rpc MemberRemove(MemberRemoveRequest) returns (MemberRemoveResponse) {}
  rpc MemberUpdate(MemberUpdateRequest) returns (MemberUpdateResponse) {}
  rpc MemberList(MemberListRequest) returns (MemberListResponse) {}
  rpc MemberPromote(MemberPromoteRequest) returns (MemberPromoteResponse) {}
}

service Maintenance {
  rpc Alarm(AlarmRequest) returns (AlarmResponse) {}
  rpc Status(StatusRequest) returns (StatusResponse) {}
  rpc Defragment(DefragmentRequest) returns (DefragmentResponse) {}
  rpc Hash(HashRequest) returns (HashResponse) {}
  rpc HashKV(HashPCBequest) returns (HashPCBesponse) {}
  rpc Snapshot(SnapshotRequest) returns (stream SnapshotResponse) {}
  rpc MoveLeader(MoveLeaderRequest) returns (MoveLeaderResponse) {}
  rpc Downgrade(DowngradeRequest) returns (DowngradeResponse) {}
}

message ResponseHeader {
  uint64 cluster_id = 1;
  uint64 member_id = 2;
  int64 revision = 3;
  uint64 raft_term = 4;
}

message RangeRequest {
  enum SortOrder {
    NONE = 0;
    ASCEND = 1;
    DESCEND = 2;
  }
  enum SortTarget {
    KEY = 0;
    VERSION = 1;
    CREATE = 2;
    MOD = 3;
    VALUE = 4;
  }
  bytes key = 1;
  bytes range_end = 2;
  int64 limit = 3;
  int64 revision = 4;
  SortOrder sort_order = 5;
  SortTarget sort_target = 6;
  bool serializable = 7;
  bool keys_only = 8;
  bool count_only = 9;
  int64 min_mod_revision = 10;
  int64 max_mod_revision = 11;
  int64 min_create_revision = 12;
  int64 max_create_revision = 13;
}

message RangeResponse {
  ResponseHeader header = 1;
  repeated KeyValue kvs = 2;
  bool more = 3;
  int64 count = 4;
}

message PutRequest {
  bytes key = 1;
  bytes value = 2;
  int64 lease = 3;
  bool prev_kv = 4;
  bool ignore_value = 5;
  bool ignore_lease = 6;
}
message PutResponse {
  ResponseHeader header = 1;
  KeyValue prev_kv = 2;
}

message DeleteRangeRequest {
  bytes key = 1;
  bytes range_end = 2;
  bool prev_kv = 3;
}
message DeleteRangeResponse {
  ResponseHeader header = 1;
  int64 deleted = 2;
  repeated KeyValue prev_kvs = 3;
}

message RequestOp {
  oneof request {
    RangeRequest request_range = 1;
    PutRequest request_put = 2;
    DeleteRangeRequest request_delete_range = 3;
    TxnRequest request_txn = 4;
  }
}
message ResponseOp {
  oneof response {
    RangeResponse response_range = 1;
    PutResponse response_put = 2;
    DeleteRangeResponse response_delete_range = 3;
    TxnResponse response_txn = 4;
  }
}

message Compare {
  enum CompareResult {
    EQUAL = 0;
    GREATER = 1;
    LESS = 2;
    NOT_EQUAL = 3;
  }
  enum CompareTarget {
    VERSION = 0;
    CREATE = 1;
    MOD = 2;
    VALUE = 3;
    LEASE = 4;
  }
  CompareResult result = 1;
  CompareTarget target = 2;
  bytes key = 3;
  oneof target_union {
    int64 version = 4;
    int64 create_revision = 5;
    int64 mod_revision = 6;
    bytes value = 7;
    int64 lease = 8;
  }
  bytes range_end = 64;
}

message TxnRequest {
  repeated Compare compare = 1;
  repeated RequestOp success = 2;
  repeated RequestOp failure = 3;
}
message TxnResponse {
  ResponseHeader header = 1;
  bool succeeded = 2;
  repeated ResponseOp responses = 3;
}

message CompactionRequest {
  int64 revision = 1;
  bool physical = 2;
}
message CompactionResponse {
  ResponseHeader header = 1;
}

message HashPCBequest {
  int64 revision = 1;
}
message HashPCBesponse {
  ResponseHeader header = 1;
  uint32 hash = 2;
  int64 compact_revision = 3;
  int64 hash_revision = 4;
}

message HashRequest {}
message HashResponse {
  ResponseHeader header = 1;
  uint32 hash = 2;
}

message SnapshotRequest {}
message SnapshotResponse {
  ResponseHeader header = 1;
  uint64 remaining_bytes = 2;
  bytes blob = 3;
  string version = 4;
}

message WatchRequest {
  oneof request_union {
    WatchCreateRequest create_request = 1;
    WatchCancelRequest cancel_request = 2;
    WatchProgressRequest progress_request = 3;
  }
}

message WatchCreateRequest {
  bytes key = 1;
  bytes range_end = 2;
  int64 start_revision = 3;
  bool progress_notify = 4;
  enum FilterType {
    NOPUT = 0;
    NODELETE = 1;
  }
  repeated FilterType filters = 5;
  bool prev_kv = 6;
  int64 watch_id = 7;
  bool fragment = 8;
}

message WatchCancelRequest {
  int64 watch_id = 1;
}

message WatchProgressRequest {}

message WatchResponse {
  ResponseHeader header = 1;
  int64 watch_id = 2;
  bool created = 3;
  bool canceled = 4;
  int64 compact_revision = 5;
  string cancel_reason = 6;
  bool fragment = 7;
  repeated Event events = 11;
}

message LeaseGrantRequest {
  int64 TTL = 1;
  int64 ID = 2;
}
message LeaseGrantResponse {
  ResponseHeader header = 1;
  int64 ID = 2;
  int64 TTL = 3;
  string error = 4;
}

message LeaseRevokeRequest {
  int64 ID = 1;
}
message LeaseRevokeResponse {
  ResponseHeader header = 1;
}

message LeaseCheckpoint {
  int64 ID = 1;
  int64 remaining_TTL = 2;
}

message LeaseCheckpointRequest {
  repeated LeaseCheckpoint checkpoints = 1;
}
message LeaseCheckpointResponse {
  ResponseHeader header = 1;
}

message LeaseKeepAliveRequest {
  int64 ID = 1;
}
message LeaseKeepAliveResponse {
  ResponseHeader header = 1;
  int64 ID = 2;
  int64 TTL = 3;
}

message LeaseKeepAliveBatchRequest {
  repeated int64 IDs = 1;
}
message LeaseKeepAliveBatchResponse {
  ResponseHeader header = 1;
  repeated int64 TTLs = 2;
}

message LeaseTimeToLiveRequest {
  int64 ID = 1;
  bool keys = 2;
}
message LeaseTimeToLiveResponse {
  ResponseHeader header = 1;
  int64 ID = 2;
  int64 TTL = 3;
  int64 grantedTTL = 4;
  repeated bytes keys = 5;
}

message LeaseStatus {
  int64 ID = 1;
}

message LeaseLeasesRequest {}
message LeaseLeasesResponse {
  ResponseHeader header = 1;
  repeated LeaseStatus leases = 2;
}

message Member {
  uint64 ID = 1;
  string name = 2;
  repeated string peerURLs = 3;
  repeated string clientURLs = 4;
  bool isLearner = 5;
}

message MemberAddRequest {
  repeated string peerURLs = 1;
  bool isLearner = 2;
}
message MemberAddResponse {
  ResponseHeader header = 1;
  Member member = 2;
  repeated Member members = 3;
}

message MemberRemoveRequest {
  uint64 ID = 1;
}
message MemberRemoveResponse {
  ResponseHeader header = 1;
  repeated Member members = 2;
}

message MemberUpdateRequest {
  uint64 ID = 1;
  repeated string peerURLs = 2;
}
message MemberUpdateResponse {
  ResponseHeader header = 1;
  repeated Member members = 2;
}

message MemberListRequest {
  bool linearizable = 1;
}
message MemberListResponse {
  ResponseHeader header = 1;
  repeated Member members = 2;
}

message MemberPromoteRequest {
  uint64 ID = 1;
}
message MemberPromoteResponse {
  ResponseHeader header = 1;
  repeated Member members = 2;
}

message DefragmentRequest {}
message DefragmentResponse {
  ResponseHeader header = 1;
}

message MoveLeaderRequest {
  uint64 targetID = 1;
}
message MoveLeaderResponse {
  ResponseHeader header = 1;
}

enum AlarmType {
  NONE = 0;
  NOSPACE = 1;
  CORRUPT = 2;
}

message AlarmMember {
  uint64 memberID = 1;
  AlarmType alarm = 2;
}

message AlarmRequest {
  enum AlarmAction {
    GET = 0;
    ACTIVATE = 1;
    DEACTIVATE = 2;
  }
  AlarmAction action = 1;
  uint64 memberID = 2;
  AlarmType alarm = 3;
}
message AlarmResponse {
  ResponseHeader header = 1;
  repeated AlarmMember alarms = 2;
}

message DowngradeRequest {
  enum DowngradeAction {
    VALIDATE = 0;
    ENABLE = 1;
    CANCEL = 2;
  }
  DowngradeAction action = 1;
  string version = 2;
}
message DowngradeResponse {
  ResponseHeader header = 1;
  string version = 2;
}

message StatusRequest {}
message StatusResponse {
  ResponseHeader header = 1;
  string version = 2;
  int64 dbSize = 3;
  uint64 leader = 4;
  uint64 raftIndex = 5;
  uint64 raftTerm = 6;
  uint64 raftAppliedIndex = 7;
  repeated string errors = 8;
  int64 dbSizeInUse = 9;
  bool isLearner = 10;
  string storageVersion = 11;
  int64 dbSizeQuota = 12;
}
